cli/tests/snapshot/snapshots/snapshot__eval_stderr_fail_additional_two_contracts2.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: missing definition for `bar`
  ┌─ [IMPORTS_PATH]/additional_contract2.ncl:3:3
  │
3 │   bar | String,
  │   ^^^ required here
  │
  ┌─ [INPUTS_PATH]/eval/fail_additional_two_contracts2.ncl:3:1
  │  
3 │ ╭ {
4 │ │   foo = 1,
5 │ │   baz = false,
6 │ │ }
  │ ╰─' in this record

note: 
  ┌─ [IMPORTS_PATH]/additional_contract2.ncl:3:9
  │
3 │   bar | String,
  │         ^^^^^^ bound here
